--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dev": "node webpack.dev.config.js"
   },
   "dependencies": {
+    "axios": "^0.15.2",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
+    "sweetalert": "^1.1.3",
     "vue": "^2.0.5",
     "vue-router": "^2.0.1"
   },
